--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "editorconfig": "2.0.0",
-    "nodemon": "^3.0.1",
-    "prettier": "3.0.3"
+    "editorconfig": "~2.0.0",
+    "nodemon": "~3.0.1",
+    "prettier": "~2.8.8"
   }
 }
