--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "./src/main.js",
+  "type":"module",
   "scripts": {
-    "dev": "nodemon ./src/main.js"
+    "dev": "nodemon ./src/index.js"
   },
   "keywords": [],
   "author": "",
